# Tashy

./: .gitignore  LICENSE  README.md  index.html  package.json
src/: App.css  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  main.rs  search.rs
src/components/: DirectoryTree.tsx  ErrorBoundary.tsx  FileList.tsx  ImageViewer.tsx  PropertyInspector.tsx  SettingsModal.tsx  TagSidebar.tsx
src/theme/: ThemeContext.tsx  presets.ts  types.ts  useTheme.ts
